--- a/devel/ragel/HISTORY
+++ b/devel/ragel/HISTORY
@@ -1,3 +1,6 @@
+2008-02-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.0
+
 2007-12-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.25
 
