--- a/utils/hal-info/HISTORY
+++ b/utils/hal-info/HISTORY
@@ -1,3 +1,6 @@
+2008-02-117 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 20080215
+
 2007-12-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 20071212
 
