--- a/kde4/kde4-l10n/HISTORY
+++ b/kde4/kde4-l10n/HISTORY
@@ -1,3 +1,7 @@
+2008-02-17  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: fix url
+	  fixes bug #14323
+
 2008-02-15  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.1
 
