--- a/kde4-apps/ktorrent4/HISTORY
+++ b/kde4-apps/ktorrent4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.0
+
 2008-02-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0rc1
 	  use project url
