--- a/kde4-apps/koffice2/HISTORY
+++ b/kde4-apps/koffice2/HISTORY
@@ -1,3 +1,6 @@
+2007-02-18 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: tarball moved to unstable
+
 2007-02-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional libwpg
 
