--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,8 @@
+2008-02-18 Ethan Grammatikidis <eekee57@fastmail.fm>
+	* PRE_BUILD: removed patch, as it fails and doesn't appear to be
+	  needed any more.
+	* 300_c++_compliant_headers.diff: removed
+
 2007-11-19 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PREPARE, DETAILS: removed amr-nb-fixed, not supported anymore
 	* BUILD, DETAILS, PREPARE, PRE_BUILD: commented out the whole amr
