--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/pygments: new spell, pythonic generic syntax highlighter
+
 2008-02-17 Vlad Glagolev <stealth@sourcemage.org>
 	* collab/moinmoin: => python-pypi
 
