--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Thomas Orgis <sobukus@orgis.org>
+	* PRE_BUILD: fix Makefile for dbus-without-hal build
+
 2007-11-25 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 0.9.8
 
