--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.78
+
 2008-02-05 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 2.77
 	  added archive mirrors
