--- a/disk/fuse/HISTORY
+++ b/disk/fuse/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.7.3
+
 2007-12-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.7.2
 
