--- a/e/e17/HISTORY
+++ b/e/e17/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Arjan Bouter <abouter@sourcemage.org>
+	* DEPENDS: moved libx* deps to ecore, where they are actually checked.
+
 2007-09-30 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: fixed check for xorg-modular
 
