--- a/windowmanagers/evilwm/HISTORY
+++ b/windowmanagers/evilwm/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Arjan Bouter <abouter@sourcemage.org>
+	* CONFIGURE,PRE_BUILD,DEPENDS: made libxrandr optional
+ 
 2007-11-11 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 1.0.0
 
