--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-19 Arjan Bouter <abouter@sourcemage.org>
+	* audio-plugins/vamp-plugin-sdk: new spell, audio analysis plugins
+
 2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/pygments: new spell, pythonic generic syntax highlighter
 
