--- a/audio-creation/audacity/HISTORY
+++ b/audio-creation/audacity/HISTORY
@@ -1,3 +1,10 @@
+2008-01-18 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: beta version bumped to 1.3.4, repaired source url
+	* DEPENDS: completed --with/--without options, repaired vorbis
+	           description, added vamp-plugin-sdk, jack and expat.
+	* PRE_BUILD: removed, the desktop file in the tarball works now.
+	* audacity.desktop.patch: removed
+
 2008-01-11 Arjan Bouter <abouter@sourcemage.org>
 	* BUILD: use normal make instead of make_single and make_normal
 
