--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Arjan Bouter <abouter@sourcemage.org>
+	* BUILD: add --disable-macosx, no idea why that got auto-enabled
+
 2007-10-22 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: changed iceweasel to icecat
 
