--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-20 Pol Vinogradov <vin.public@gmail.com>
+	* disk/sdparm: new spell, utility to access/tune SCSI disk parameters
+
 2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/pygments: new spell, pythonic generic syntax highlighter
 
