--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,6 @@
+2008-02-20 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 1.5.6
+
 2008-01-05 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DEPENDS: added libidl as dependency
 
