--- a/disk/hdparm/HISTORY
+++ b/disk/hdparm/HISTORY
@@ -1,3 +1,6 @@
+2008-02-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 8.4
+
 2008-02-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 8.2
 
