--- a/database/tokyocabinet/HISTORY
+++ b/database/tokyocabinet/HISTORY
@@ -1,3 +1,6 @@
+2008-02-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.15
+
 2008-02-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.14
 
