--- a/x11-toolkits/fltk/HISTORY
+++ b/x11-toolkits/fltk/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.8rc1
+
 2007-03-15 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: xinerama -> libxinerama
 	  Optionally depend on libxinerama only if using xorg_modular,
