--- a/kde4-apps/dragonplayer/HISTORY
+++ b/kde4-apps/dragonplayer/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.1
+
 2008-02-01  Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTS: added
 	  dragon player is now part of kdemultimedia4
