--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-28 Robin Cook <rcook@wyrms.net>
+	* New Spell: gnome2-libs/gnome-settings-daemon
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* New Spell: gnome2-libs/libgweather
 
