--- a/doc/evince/HISTORY
+++ b/doc/evince/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.91
+
 2007-11-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.2
 
