--- a/gnome2-apps/gcalctool/HISTORY
+++ b/gnome2-apps/gcalctool/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 5.21.92
+
 2007-10-17 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 5.20.2
 
