--- a/gnome2-apps/tomboy/HISTORY
+++ b/gnome2-apps/tomboy/HISTORY
@@ -1,3 +1,7 @@
+2008-02-28 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.9.7
+	* DEPENDS: added ndesk-dbus and ndesk-dbus-glib
+
 2007-11-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.8.2
 
