--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2008-02-28 Robin Cook <rcook@wyrms.net>
 	* New Spell: gnome2-libs/gnome-settings-daemon
 	* New Spell: gnome2-libs/gnome-desktop-sharp
+	* New Spell: video/totem-pl-parser
 
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* New Spell: gnome2-libs/libgweather
