--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,6 @@
+2008-02-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.40.7
+
 2008-02-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: Updated to 1.40.6
 
