--- a/utils/file/HISTORY
+++ b/utils/file/HISTORY
@@ -1,3 +1,6 @@
+2008-02-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: new WEB_SITE and SOURCE_URL[0]
+
 2007-12-31 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.23
 
