--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,5 +1,14 @@
+2008-02-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.20
+
 2008-02-28 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.3, SECURITY_PATCH=2, CVE-2008-0595
+
+2008-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.4
+
+2007-08-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.2
 
 2007-06-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: fixed WEB_SITE
