--- a/kde4/kde4-profile/HISTORY
+++ b/kde4/kde4-profile/HISTORY
@@ -1,3 +1,6 @@
+2008-02-29  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.64
+
 2008-02-24 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Allow for stable and unstable versions
 
