--- a/e/imlib2/HISTORY
+++ b/e/imlib2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Dale E. Edmons <linuxfan@sourcemage.org>
+	* DETAILS: KEYWORDS update.
+
 2007-01-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: make all image formats optional
 	  fixes bug #14062
