--- a/gnome2-libs/gnome-settings-daemon/HISTORY
+++ b/gnome2-libs/gnome-settings-daemon/HISTORY
@@ -1,2 +1,5 @@
+2008-02-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2008-02-28 Robin Cook <rcook@wyrms.net>
 	* NEW SPELL: DETAILS, DEPENDS
