--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,6 @@
+2008-03-01 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: fixed SOURCE properly, it was a new tarball
+ 
 2008-02-24 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: fixed SOURCE
 
