--- a/gnome2-libs/liboobs/HISTORY
+++ b/gnome2-libs/liboobs/HISTORY
@@ -1,3 +1,6 @@
+2008-02-28 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2007-09-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.0
 	* PRE_BUILD: removed
