--- a/gnome2-apps/gnome-system-tools/HISTORY
+++ b/gnome2-apps/gnome-system-tools/HISTORY
@@ -1,3 +1,6 @@
+2008-02-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2007-09-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.0
 
