--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2008-03-01 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.9-1
+
 2008-02-22 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 6.3.8-11
 
