--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,6 @@
+2008-03-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 8.62, fixed desc
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_SUB_DEPENDS: removed is_depends_enabled.function reference
 
