--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,6 @@
+2008-03-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.5
+
 2008-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.4, removed DEVEL (not confusing
           the users with devel/non-stable branch question)
