--- a/telephony/asterisk-addons/HISTORY
+++ b/telephony/asterisk-addons/HISTORY
@@ -1,3 +1,6 @@
+2008-03-01 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* DETAILS: updated spell to 1.4.6
+
 2008-01-09 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: updated spell to 1.4.5
 
