--- a/xfce/xfce4-profile/HISTORY
+++ b/xfce/xfce4-profile/HISTORY
@@ -1,7 +1,7 @@
 2008-03-01 Vlad Glagolev <stealth@sourcemage.org>
 	* INSTALL: cleaned up
 	* DEPENDS: added xfce4-dict-plugin and xfce-mcs-plugins,
-	  optional => suggest, cleaned up
+	  optional => suggest, depends => runtime, cleaned up
 
 2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.4.2 (Xfce 4.4.2)
