--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,6 @@
+2008-03-01 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: version update to 0.5.8.5, SOURCE_URL path change
+
 2008-01-19 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
 	* DETAILS: vestion update to 0.5.8.1
 	* DEPENDS: force_depends boost (have to be the last version)
