--- a/chat-im/pidgin/HISTORY
+++ b/chat-im/pidgin/HISTORY
@@ -1,3 +1,6 @@
+2008-03-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.4.0
+
 2007-12-07 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.3.1
 
