--- a/kde-apps/kdevelop/HISTORY
+++ b/kde-apps/kdevelop/HISTORY
@@ -1,3 +1,6 @@
+2008-03-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 3.5.1. Fixed SOURCE_URL
+
 2007-11-04 Alexander Tsamutali <astsmtl@gmail.com>
 	* DEPENDS: Now depends on ghc instead of GHC
 
