--- a/editors/lyx/HISTORY
+++ b/editors/lyx/HISTORY
@@ -1,3 +1,6 @@
+2008-03-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.5.4
+
 2007-12-19 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.5.3
 
