--- a/devel/phpmyadmin/HISTORY
+++ b/devel/phpmyadmin/HISTORY
@@ -1,3 +1,6 @@
+2008-03-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.11.5
+
 2008-01-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.11.4
 
