--- a/e-17/e17/HISTORY
+++ b/e-17/e17/HISTORY
@@ -1,3 +1,6 @@
+2008-03-02 Ladislav Hagara <hgr@vabo.cz>
+	* e17update: e -> e-17
+
 2008-02-27 Dale E. Edmons <linuxfan@sourcemage.org>
 	* DETAILS: Added KEYWORDS
 
