--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: Update to 1.3.0 .
+
 2008-02-20 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: Update to 1.2.1 .
 
