--- a/net/dhcpcd/HISTORY
+++ b/net/dhcpcd/HISTORY
@@ -1,3 +1,7 @@
+2008-03-02 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.2.3
+	* BUILD: added CSTD=gnu99
+
 2008-02-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.2.1
 
