--- a/graphics/wings3d/HISTORY
+++ b/graphics/wings3d/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2008-01-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.99.01
 
