--- a/graphics/djview4/HISTORY
+++ b/graphics/djview4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-11-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.2
 
