--- a/archive/ncompress/HISTORY
+++ b/archive/ncompress/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+ 
 2006-10-26 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* INSTALL: use TRACK_ROOT not INSTALL_ROOT when linking #9163
 
