--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2.2, make 2.2 default GNUTLS_BRANCH
+
 2008-01-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.2.1
 
