--- a/printer/photoprint/HISTORY
+++ b/printer/photoprint/HISTORY
@@ -1,3 +1,7 @@
+2008-03-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.7
+	* DEPENDS: add optional cups
+
 2007-11-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.6
 
