--- a/disk/xfsprogs/HISTORY
+++ b/disk/xfsprogs/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.7
+
 2008-02-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.6
 
