--- a/libs/soprano/HISTORY
+++ b/libs/soprano/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.3
+
 2008-02-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.2
 
