--- a/graphics-libs/poppler/HISTORY
+++ b/graphics-libs/poppler/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Ladislav Hagara <hgr@vabo.cz>
+	* DEPENDS: added -sub TOOLS for qt4 [Bug 14350]
+
 2008-01-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.4
 
