--- a/python-pypi/sqlobject/HISTORY
+++ b/python-pypi/sqlobject/HISTORY
@@ -1,3 +1,6 @@
+2008-03-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.4
+
 2008-02-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.3
 
