--- a/graphics-libs/poppler/HISTORY
+++ b/graphics-libs/poppler/HISTORY
@@ -1,3 +1,7 @@
+2008-03-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.1
+	* BUILD: fix for qt4 support
+
 2008-01-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.4
 
