--- a/database/libdbi-drivers/HISTORY
+++ b/database/libdbi-drivers/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.3-1
+
 2008-02-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.3
 	* DEPENDS: add optional openjade
