--- a/http/elinks/HISTORY
+++ b/http/elinks/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.11.4rc1
+
 2008-02-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.11.4rc0, SECURITY_PATCH=2, CVE-2007-2027
 
