--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.93rc1
+
 2008-02-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Increment SECURITY_PATCH=6 for 0.92.1
 
