--- a/video/xjadeo/HISTORY
+++ b/video/xjadeo/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Juuso Alasuutari <iuso@sourcemage.org>
+	* DEPENDS: Changed depends jack to JACK-DRIVER.
+
 2008-02-14 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD, xjadeo-swscale.patch: make it work with ffmpeg-svn
 	  (swscaler instead of img_convert)
