--- a/audio-creation/audacity/HISTORY
+++ b/audio-creation/audacity/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Juuso Alasuutari <iuso@sourcemage.org>
+	* DEPENDS: Changed optional_depends jack to JACK-DRIVER.
+
 2008-01-18 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: beta version bumped to 1.3.4, repaired source url
 	* DEPENDS: completed --with/--without options, repaired vorbis
