--- a/audio-creation/jack-keyboard/HISTORY
+++ b/audio-creation/jack-keyboard/HISTORY
@@ -1,6 +1,7 @@
 2008-03-04 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, INSTALL: Updated to 2.2.
 	* DEPENDS: Added optional_depends lash.
+	* segfault_fix.diff, PRE_BUILD: Added, fixes a segfault.
 
 2007-12-31 Juuso Alasuutari <iuso@sourcemage.org>
 	* DEPENDS: Changed depends jack to JACK-DRIVER because jackdmp
