--- a/utils/avahi/HISTORY
+++ b/utils/avahi/HISTORY
@@ -1,3 +1,10 @@
+2008-03-03 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 0.6.22
+	* BUILD, PRE_BUILD: spell now creates and uses avahi group
+	  (fixes bug #14184)
+	* PRE_BUILD, dbus.patch: patch removed, no longer needed
+	* qt.patch: adapted to this version
+
 2007-12-27 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.6.21, removed PATCHLEVEL
 	* PRE_BUILD, dbus.patch: added patch to compile with dbus < 1.1.1
