--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,7 @@
+2008-03-04 Julien "_kaze_" ROZO <julien@rozo.org>
+	* BUILD, Xcursor.patch: readded a newer version of this patch to solve
+	  compilation issue with xorg-modular grimoire
+	  
 2008-03-01 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: fixed SOURCE properly, it was a new tarball
  
