--- a/editors/ht/HISTORY
+++ b/editors/ht/HISTORY
@@ -1,3 +1,7 @@
+2008-03-05 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.10
+	* DEPENDS: added g++
+
 2007-06-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.7
 
