--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,7 @@
+2008-03-05 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated devel to version 1.5.0
+	* PRE_BUILD: Only copy webkit.c for stable
+
 2008-02-25 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.4.13
 	* PRE_BUILD: Removed webkitgtk.patch.
