--- a/graphics/gscan2pdf/HISTORY
+++ b/graphics/gscan2pdf/HISTORY
@@ -1,3 +1,6 @@
+2008-03-05 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.9.22
+
 2008-02-02 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.21
 	* DEPENDS: add optional tesseract
