--- a/xfce/orage/HISTORY
+++ b/xfce/orage/HISTORY
@@ -1,3 +1,8 @@
+2008-03-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 4.5.12.2
+	  fixed WEB_SITE
+
 2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.4.2 (Xfce 4.4.2),
 	  gurus => upstream, cleaned up
@@ -11,4 +16,3 @@
 
 2007-01-23 George Sherwood <george@beernabeer.com>
 	* DEPENDS, DETAILS, HISTORY: created the spell
-
