--- a/utils/dbus/HISTORY
+++ b/utils/dbus/HISTORY
@@ -1,3 +1,7 @@
+2008-03-05 Eric Sandall <sandalle@sourcemage.org>
+	* PREPARE: Removed
+	* DEPENDS: Only seems to work with expat, not libxml2
+
 2008-02-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.20
 
