--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2008-03-06 Pol Vinogradov <vin.public@gmail.com>
+	* PRE_BUILD: patch only non-VCS branch
+
 2008-02-29 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS: completes --with and --without options
 	  added missing optional deps
