--- a/kde4/kdemultimedia4/HISTORY
+++ b/kde4/kdemultimedia4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-06  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.65
+
 2008-02-29  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.64
 
