--- a/kde4/HISTORY
+++ b/kde4/HISTORY
@@ -1,5 +1,6 @@
 2008-03-03-06 Treeve Jelbert <treeve@sourcemage.org>
 	* KDE_DEPENDS: fix a subdepends problem
+	  fix typo
 
 2008-01-09 Treeve Jelbert <treeve@sourcemage.org>
 	* KDE_DEPENDS: add "sub_depends qt4 QT3"
