--- a/disk/gphotofs/HISTORY
+++ b/disk/gphotofs/HISTORY
@@ -1,3 +1,7 @@
+2008-03-06 Julien "_kaze_" ROZO <julien@rozo.org>
+	* gphotofs-0.4.0.patch: added, a work around that includes locale.h
+	  in gphotofs.c if LC_CTYPE is not defined during spell casting.
+
 2008-03-05 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DEPENDS: added fuse
 
