--- a/editors/ht/HISTORY
+++ b/editors/ht/HISTORY
@@ -1,3 +1,6 @@
+2008-03-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.12
+
 2008-03-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.10
 	* DEPENDS: added g++
