--- a/gnome2-apps/ghex/HISTORY
+++ b/gnome2-apps/ghex/HISTORY
@@ -1,3 +1,6 @@
+2008-03-06 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.92
+
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.1
 
