--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-06 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.22.2
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.22.1
 
