--- a/x11-toolkits/gtk-sharp-2/HISTORY
+++ b/x11-toolkits/gtk-sharp-2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-06 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.12.0
+
 2008-02-28 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.11.91
 
