--- a/gnome2-libs/libgnome/HISTORY
+++ b/gnome2-libs/libgnome/HISTORY
@@ -1,3 +1,6 @@
+2008-03-06 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.91
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.21.90
 
