--- a/video-libs/swfdec/HISTORY
+++ b/video-libs/swfdec/HISTORY
@@ -1,3 +1,6 @@
+2008-03-07 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 0.6.0
+
 2007-12-18 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 0.5.5
 
