--- a/libs/stlport/HISTORY
+++ b/libs/stlport/HISTORY
@@ -1,3 +1,7 @@
+2008-03-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: added make_single since the build process doesn't work
+	  if the number of jobs is >1
+
 2008-01-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.5
 
