--- a/printer/gutenprint/HISTORY
+++ b/printer/gutenprint/HISTORY
@@ -1,3 +1,6 @@
+2008-03-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.1.7
+
 2008-01-27 Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTS: added, remove itself, before building,
 	  else some drivers are not installed
