--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-03-07 Eric Sandall <sandalle@sourcemage.org>
+	* latest.defaults: Latest mm_patch is 2.6.25-rc3-mm1
+	* info/patches/mm_patches/2.6.25-rc3-mm1: Added
+
 2008-02-26 Eric Sandall <sandalle@sourcemage.org>
 	* info/patches/mm_patches/2.6.25-rc2-mm1: Added
 	* info/patches/PRE_2_6/patch-2.6.25-rc2: Added (for 2.6.25-rc2-mm1)
@@ -4045,3 +4049,4 @@
 2002-08-20 Wolfgang Scheicher <worf@sbox.tu-graz.ac.at>
 	* Rewrite - Attempt to merge several kernel spells into one
 	  Now features a menu to select which version to build
+
