--- a/gnome2-libs/goffice-0.6/HISTORY
+++ b/gnome2-libs/goffice-0.6/HISTORY
@@ -1,3 +1,7 @@
+2008-03-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.6.2
+	* PRE_BUILD: new version fixed that bug
+
 2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++, fixed the patch, twice
 
