--- a/kde4/kdegraphics4/HISTORY
+++ b/kde4/kdegraphics4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-07  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.2
+
 2008-03-06  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.65
 
