--- a/libs/bluez-libs/HISTORY
+++ b/libs/bluez-libs/HISTORY
@@ -1,3 +1,6 @@
+2008-03-08 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.28
+
 2008-02-25 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.27
 
