--- a/utils/bluez-utils/HISTORY
+++ b/utils/bluez-utils/HISTORY
@@ -1,3 +1,6 @@
+2008-03-08 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.28
+
 2008-02-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: dbus-glib, pygtk2 are useless, dbus is strictly required now
 
