--- a/gnome2-apps/bluez-gnome/HISTORY
+++ b/gnome2-apps/bluez-gnome/HISTORY
@@ -1,3 +1,6 @@
+2008-03-08 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 0.24
+
 2008-02-25 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.23
 
