--- a/database/firebird/HISTORY
+++ b/database/firebird/HISTORY
@@ -1,3 +1,7 @@
+2008-03-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.1.0.17755-ReleaseCandidate2
+	* PREPARE: version 2.1 is no longer experimental
+
 2008-01-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1.0.17735-ReleaseCandidate1
 	* fb2.1.patch.bz2: updated
