--- a/kernels/lm_sensors/HISTORY
+++ b/kernels/lm_sensors/HISTORY
@@ -1,3 +1,6 @@
+2008-03-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.10.6
+
 2008-02-03 Ladislav Hagara <hgr@vabo.cz>
 	* PRE_BUILD, conf-lex.patch: removed patch [Bug 14260]
 
