--- a/chat-libs/gloox/HISTORY
+++ b/chat-libs/gloox/HISTORY
@@ -1,4 +1,7 @@
 2008-03-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: updated to 0.9.9.4
+
+2008-03-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: updated to 0.9.9.3
 
 2007-11-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
